apps/dnse/overlays/aws-us-west-2-cc-smarsh-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dnse
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: dnse
      app.kubernetes.io/instance: dnse
  template:
    spec:
      containers:
        - name: dnse
          resources:
            limits:
              cpu: 2000m
              memory: 4G
              ephemeral-storage: 2G
            requests:
              cpu: 100m
              memory: 3G
              ephemeral-storage: 256M
